--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,7 @@
 # RStudio files
 .Rproj.user/
 *.Rproj/
+*.Rproj
 
 # produced vignettes
 vignettes/*.html
@@ -46,6 +47,6 @@ rsconnect/
 *.xml
 *.shx
 
-# Ignore collar_data folder
+# Ignore collar_data and output sub-folders in telemetry parent
 telemetry/collar_data
-*.Rproj
+telemetry/output
