--- a/.gitignore
+++ b/.gitignore
@@ -47,6 +47,7 @@ rsconnect/
 *.xml
 *.shx
 
-# Ignore collar_data and output sub-folders in telemetry parent
+# Ignore collar_data, output, and pipeline sub-folders in telemetry parent
 telemetry/collar_data
 telemetry/output
+telemtry/pipeline
