--- a/.gitignore
+++ b/.gitignore
@@ -1,38 +1,62 @@
-# History files
-.Rhistory
-.Rapp.history
+# Compiled source #
+###################
+*.com
+*.class
+*.dll
+*.exe
+*.o
+*.so
+*.pyc
 
-# Session Data files
+# Logs #
+######################
+*.log
+*.xml
+*.iml
+
+# OS generated files #
+######################
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+*.db
+
+# Cache Folders #
+#################
+.idea
+.ipynb_checkpoints
+.Rhistory
+.Rdata
+.Rapp.history
+/*_cache/
+/cache/
+*.utf8.md
+*.knit.md
+
+# Session Data files #
+######################
 .RData
 
-# Example code in package build process
+# Package build files #
+#########################################
 *-Ex.R
-
-# Output files from R CMD build
 /*.tar.gz
-
-# Output files from R CMD check
 /*.Rcheck/
+vignettes/*.html
+vignettes/*.pdf
 
-# RStudio files
+# RStudio files #
+#################
 .Rproj.user/
 *.Rproj/
 *.Rproj
 
-# produced vignettes
-vignettes/*.html
-vignettes/*.pdf
-
 # OAuth2 token, see https://github.com/hadley/httr/releases/tag/v0.3
 .httr-oauth
-
-# knitr and R markdown default cache directories
-/*_cache/
-/cache/
-
-# Temporary files created by R markdown
-*.utf8.md
-*.knit.md
 
 # Shiny token, see https://shiny.rstudio.com/articles/shinyapps.html
 rsconnect/
@@ -52,6 +76,3 @@ rsconnect/
 /output
 /pipeline
 /gis
-
-# Cache folders
-.idea
